# ifsc

./: .gitignore  README.md  ifsc.py  main.py  requirements.txt  setup.cfg  test_ifsc.py
config/: config.py  path.py
docs/: conf.py  usage.rst
docs/_build/doctrees/: class.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/html/: .buildinfo  class.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/ifsc/: ifsc.html
docs/_build/html/_sources/: class.rst.txt  index.rst.txt  installation.rst.txt
docs/source/: class.rst  conf.py  index.rst
ifsc/: __init__.py  ifsc.py
ifsc/assets/: HDFC.json  SBIN.json  bank_names.json
ifsc/config/: path.py
ifsc/utils/: custom_exception.py  io_operation.py  print_table.py  test_utils.py
source/: conf.py  index.rst
tests/: test_ifsc.py
