[metadata]
name = ifsc-validator
version = 1.0.0
license = MIT
description = Python Library to validate IFSC and Bank Codes
long_description = file: README.md
author = Rahul
author_email = <Optional: author e-mail>
classifiers=
   Natural Language :: English

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    requests
    pytest
    sphinx

[options.packages.find]
where=ifsc