[metadata]
name = ifsc-validator
version = 1.0.0
license = MIT
description = Python Library to validate IFSC and Bank Codes
long_description = file: README.md
author = Rahul
classifiers=
   Natural Language :: English

[options]
packages = find:
package_dir =
    =ifsc
include_package_data = True
install_requires =
    requests
    pytest
    sphinx
    prettytable

[options.package_data]
ifsc = ["assets/*.json"]

[options.packages.find]
where=ifsc

[options.entry_points]
console_scripts = 
    ifsc-cli = ifsc.ifsc:main